# rocketclaw

./: .dockerignore  AGENTS.md  Dockerfile  README.md  REQUIREMENTS.md  docker-compose.yml  pyproject.toml
docs/: architecture.md
examples/example_workspace/.rocketclaw/memory/: README.md
examples/example_workspace/.rocketclaw/workspace/: AGENTS.md  SOUL.md  USER.md
examples/example_workspace/.rocketclaw/workspace/PROJECTS/: README.md
examples/example_workspace/.rocketclaw/workspace/PROJECTS/alpha/: PROJECT.md
memory/: 2026-03-20.md
rocketclaw/config/: settings.py
rocketclaw/core/: agent_runtime.py  context_builder.py  planner.py
rocketclaw/engine/: model_provider.py  sub_agents.py
rocketclaw/interface/: cli.py  terminal_ui.py
rocketclaw/memory/: memory_store.py  retrieval.py  task_store.py
rocketclaw/skills/: inventory.py
rocketclaw/tools/: tool_registry.py
rocketclaw/transports/: __init__.py  base.py  cli.py  registry.py
rocketclaw/transports/whatsapp/: adapter.py  provider_meta.py  provider_twilio.py  webhook_server.py
rocketclaw/workspace/: manager.py  projects.py  soul.py  user.py
tests/: test_cli.py  test_context.py  test_memory.py  test_model_provider.py  test_planner.py  test_retrieval.py  test_skills.py  test_tasks.py  test_tools.py  test_transport.py  test_webhook.py  test_workspace.py
