[project]
name = "rocketclaw"
version = "0.1.0"
description = "RocketClaw personal AI agent runtime"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Pedro"}]
license = {text = "MIT"}
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "prompt-toolkit>=3.0.43",
  "pydantic>=2.6.4",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
train = ["pytest>=8.1.1", "pytest-mock>=3.14.0"]

[project.scripts]
rocketclaw = "rocketclaw.interface.cli:app"

[tool.pytest.ini_options]
addopts = "-q"

testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["rocketclaw*"]
exclude = ["memory*", "tests*", "docs*", "examples*"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
